option(
    'id-led-group',
    type : 'string',
    value: 'enclosure_identify',
    description : 'The identify LED group name'
)

option(
    'long-press-time-ms',
    type : 'integer',
    value: 3000,
    description : 'Time to long press the button'
)

option(
    'lookup-gpio-base',
    type : 'feature',
    value: 'enabled',
    description : 'Look up the GPIO base value in /sys/class/gpio. Otherwise use a base of 0.'
)

option(
    'power-button-profile',
    type: 'combo',
    choices: ['default', 'host_then_chassis_poweroff'],
    value: 'default',
    description : 'Used to select a custom power button behavior profile.'
)

option(
    'reset-button-do-warm-reboot',
    type : 'feature',
    value : 'disabled',
    description : 'Enable warm reboot of the reset button'
)
